# vibesafe

./: .envrc  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_PLAN.md  ROADMAP.md  SPEC.md  TODOS.md  defless.toml  demo_vibesafe.py  manual_test_phase1.py  pyproject.toml  test_complex.py  test_vibesafe.py  verify_mcp.py  vibesafe.toml
.claude/: PROJECT_PREFERENCES.md  SKILL_UPDATES.md
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: get-mode.md  init.md  set-mode.md  vibe.md
.claude/skills/: defless.md  documentation-2025.md  hackernews-writing.md  uv.md  vibesafe.md
.claude/skills/claude-code-plugin-dev/: troubleshooting.md
.claude/skills/claude-code-plugin-dev/examples/: complete-plugins.md
.claude/skills/claude-code-plugin-dev/guides/: best-practices.md  development-workflow.md  publishing.md
.claude/skills/claude-code-plugin-dev/reference/: agent-skills.md  hooks.md  mcp-servers.md  plugin-manifest.md  plugin-structure.md  slash-commands.md
.github/: CLAUDE_ACTIONS.md
.github/workflows/: ci.yml  claude-review.yml  claude-test-analysis.yml  deploy-docs.yml  pypi-publish.yml
commands/: get-mode.md  init.md  set-mode.md  vibe.md
examples/: __init__.py
examples/api/: __init__.py  routes.py
examples/math/: __init__.py  ops.py
hooks/: hooks.json
prompts/: cli_command.j2  function.j2  http_endpoint.j2
skills/vibesafe/: SKILL.md
src/defless/: __init__.py  ast_parser.py  cli.py  codegen.py  config.py  core.py  hashing.py  mcp.py  providers.py  runtime.py  testing.py
src/vibesafe/: __init__.py  ast_parser.py  cli.py  codegen.py  config.py  core.py  exceptions.py  fastapi.py  hashing.py  mcp.py  providers.py  runtime.py  testing.py
src/vibesafe/templates/: cli_command.j2  function.j2  http_endpoint.j2
tests/: __init__.py  conftest.py  test_ast_parser.py  test_cli.py  test_codegen_errors.py  test_codegen_markdown.py  test_config.py  test_core.py  test_dependency_extraction.py  test_examples.py  test_fastapi.py  test_hashing.py  test_integration.py  test_mcp.py  test_mcp_integration.py  test_mcp_use_integration.py  test_providers.py  test_runtime.py  test_testing.py
tests/defless/: test_manual_test_phase1_hello.py  test_test_add_numbers.py  test_test_gated_func.py
tests/vibesafe/: test___main___async_hello.py  test___main___hello.py  test_examples_api_routes_hello_endpoint.py  test_examples_api_routes_sum_endpoint.py  test_examples_math_ops_fibonacci.py  test_examples_math_ops_is_prime.py  test_examples_math_ops_sum_str.py  test_manual_test_phase1_async_hello.py  test_manual_test_phase1_hello.py  test_test_add_numbers.py  test_test_gated_func.py
